examples/test/testpolicy18160.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18160
  namespace: namespace352
spec:
  podSelector:
    matchLabels:
      key19: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value33
          key4: value12
      podSelector:
        matchLabels:
          key29: value41
          key20: value34
